# _vddb

./: .gitignore  Cargo.toml  notes.txt  problems.txt  vddb_history.txt
src/: lib.rs  main.rs  types.rs
src/query/: evaluator.rs  mod.rs  parser.rs  planner.rs
src/repl/: mod.rs
src/schema/: metadata.rs  mod.rs
src/storage/: block.rs  buffer.rs  column.rs  compression.rs  index.rs  mod.rs
src/transaction/: mod.rs
