[package]
name = "vddb"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ordered-float = {version = "5.0.0" , features = ["serde"]}
fs2 = "0.4.3"
log = "0.4"
prettytable-rs = "0.10"
rustyline = "10.0"

[dev-dependencies]
rand = "0.8"
